added blog posts, still working on books

--- a/_posts/2019-12-31-books.md
+++ b/_posts/2019-12-31-books.md
@@ -1,28 +1,28 @@
 ---
 layout:       post
-title:        The Most Interesting Books I Read in 2019
-date:         2019-12-31
-summary:      The books which influenced me the most this year.
+title:        Reading and Media
+date:         2020-11-26
+summary:      Books, Netflix, Youtube and more!
 categories:   
 ---
 
-I used to read a lot in high school, but between studying, joining clubs, and meeting
-new people, I completely lost the habit in my first two years of university.
-This summer I had an hour long commute each way on the subway, giving me the perfect
-opportunity to start reading again. Here are the books I liked reading the most this year, in
-the opposite order I finished reading them.
-
 ---
 
-## 1. *Finding Meaning in an Imperfect World*, Iddo Landau
+# Reading
 
-One of the most important books to me is *Man's Search for Meaning* by Viktor Frankl.
-In it, he talks about finding meaning through alleviating suffering in others.
-Landau's book provides a counter-balance to Frankl, urging us not to be
-perfectionists when finding meaning in our lives. We don't need to be
-curing cancer or solving world poverty to be able to call our lives meaningful. Instead,
-we should be grateful for the meaning already in our lives found through our relationships
-and whatever impact, no matter how small, our work may have.
+I used to hate reading in high school. Thought it was the biggest waste of time. 
+Little did I realise how wrong I was. Although I still have a hard time forcing myself
+to sit down and read a book rather than watch some youtube, I definitely do have a
+newfound appreciation for reading. Thus, I have started incorporating a little bit
+of reading into my daily life.
+
+Currently I am reading:
+<br>  
+  
+
+<img src="/images/blog/books/superforecasting.jpg" alt="superforecasting" width="200" align="right"/>
+<img src="/images/blog/books/thinkingfastandslow.jpg" alt="superforecasting" width="200" align = "left"/>
+<img src="/images/blog/books/thinkingfastandslow.jpg" alt="superforecasting" width="200" align = "middle"/>
 
 ## 2. *The Person and the Situation*, Lee Ross and Richard Nisbett
 
