--- a/_posts/2019-12-31-books.md
+++ b/_posts/2019-12-31-books.md
@@ -24,68 +24,4 @@ Currently I am reading:
 <img src="/images/blog/books/thinkingfastandslow.jpg" alt="superforecasting" width="200" align = "left"/>
 <img src="/images/blog/books/thinkingfastandslow.jpg" alt="superforecasting" width="200" align = "middle"/>
 
-## 2. *The Person and the Situation*, Lee Ross and Richard Nisbett
-
-I read this book because one of my favourite authors, Malcolm Gladwell, names this
-book as a major influence. It does an excellent job of giving an overview
-accessible to the general public of the research in social psychology while also
-providing sufficient detail and references to dig more deeply on your own. You
-can feel the excitement through the page as the authors outline future work to be done in the field
-and all the areas in which their research could help improve society.
-
-## 3. *The Power Broker*, Robert Caro
-
-Robert Caro is incredibly talented at making bureaucracy exciting to read about.
-I find it satisfying to read all the details Caro has painstakingly dug up through his research.
-It's fascinating to read about the ambition and work ethic Bob Moses had and incredibly
-depressing to realize the catastrophic effect it's had on New York City's transportation system today.
-I'm currently reading the fourth book in *The Years of Lyndon Johnson* series and have been enjoying
-that series even more.
-
-## 4. *The Emperor of All Maladies*, Siddhartha Mukherjee
-
-I enjoyed Mukherjee's literary style and his method of revealing the history of cancer
-through narrative. I also liked his commentary on the War on Cancer and the implications
-and reasons behind it's failure to produce results akin to other major government projects such as Apollo.
-
-## 5. *Models of My Life*, Herbert Simon
-
-I liked reading about his days in undergrad at the University of Chicago;
-I'm currently reading *The Second Mountain* by David Brooks and he speaks similarly
-about the special environment at that institution. I was surprised at just how
-adventurous Herbert Simon was and enjoyed reading about his travels. He writes
-candidly about his relationship with his parents, his kids, and his wife, which
-I found illuminating.
-
-## 6. *I Will Teach You to be Rich*, Ramit Sethi
-
-The title of this book is off-putting, which is unfortunate since this book
-is well done. It has a bit of a self-help flavour, but is self-aware and tuned
-to its target audience. I knew nothing about personal finance going in and
-found this book immensely helpful in getting me excited about money while also
-making me more aware of my own faults and emotions about it.
-
-## 7. *Understanding Power*, Noam Chomsky
-
-This book is known as a gentle introduction to Chomsky's work as it's in the format of
-transcripts of talks/discussions he's given instead of essays.
-I personally would have preferred something more detailed to convince me of his theories;
-I don't like the conspiratorial (yes, I looked that word up) tone of the book. I
-liked the personal comments included in the book; here's one which has particularly stuck with me:
-
-> One choice is to assume the worst, and then you can be guaranteed that it’ll happen. The other is to assume that there’s some hope for change, in which case it’s possible that you can help to effect change. So you’ve got two choices, one guarantees the worst will happen, the other leaves open the possibility that things might get better. Given those choices, a decent person doesn’t hesitate.
-
-## 8. *Personal History*, Katharine Graham
-
-I found it fascinating to read about the character and accomplishments of Graham's parents,
-and the corresponding values and expectations pressed upon her during her upbringing.
-As it says in the title, this memoir is quite personal. I found it heart-wrenching to
-read about her husband's mental illness and the impact it had on her and her children.
-It's incredibly inspiring how she pulled herself out of that to wield
-immense power and become a trailblazer for women's rights in the workplace.
-
----
-
-I've managed to maintain my reading habit this semester for the first time
-in my undergrad, so hopefully I can keep it up and read some more interesting books
-this upcoming year.
+More to come here..
