--- a/_posts/2019-12-31-books.md
+++ b/_posts/2019-12-31-books.md
@@ -10,14 +10,27 @@ categories:
 
 # Reading
 
-I used to hate reading in high school. Thought it was the biggest waste of time. 
-Little did I realise how wrong I was. Although I still have a hard time forcing myself
-to sit down and read a book rather than watch some youtube, I definitely do have a
-newfound appreciation for reading. Thus, I have started incorporating a little bit
-of reading into my daily life.
+I didn't like reading in high school. I thought it was a big waste of time. But as I began to read more, 
+I found myself learning a lot about things that really interested me. 
+Although I still have a hard time forcing myself to sit down and read a book 
+rather than watch some youtube, I definitely do have a newfound appreciation for reading. 
+Thus, I have started incorporating a little bit of reading into my daily life.
 
 Currently I am reading:
-<br>  
-  
+<br> 
+<div class="book-post">
+<img class="book" src="/images/blog/books/superforecasting.jpg" alt="superforecasting"/>
+<img class="book" src="/images/blog/books/thinkingfastandslow.jpg" alt="thinkingfastandslow"/>
+</div>
+
+In the recent past, I have read:  
+
+* **The Last Lecture** - *Randy Pausch*
+* **When Breath Becomes Air** - *Paul Kalanithi*
+
+# Youtube
+
+Here is a collection of my favourite Youtube channels! Check them out for yourself
+
 
 More to come here..
