added youtube channels

--- a/_posts/2019-12-31-books.md
+++ b/_posts/2019-12-31-books.md
@@ -23,14 +23,27 @@ Currently I am reading:
 <img class="book" src="/images/blog/books/thinkingfastandslow.jpg" alt="thinkingfastandslow"/>
 </div>
 
-In the recent past, I have read:  
+In the recent past, my favourites are:
 
 * **The Last Lecture** - *Randy Pausch*
 * **When Breath Becomes Air** - *Paul Kalanithi*
 
 # Youtube
 
-Here is a collection of my favourite Youtube channels! Check them out for yourself
+Here is a collection of my favourite Youtube channels. Check them out for yourself!
 
+<section id="youtube-posts">
+        <a href="https://www.youtube.com/3blue1brown"><img class="youtube" src="/images/blog/youtube/3blue1brown.jpg" alt="3blue1brown"/></a>
+        <a href="https://www.youtube.com/numberphile"><img class="youtube" src="/images/blog/youtube/numberphile.png" alt="numberphile"/></a>
+        <a href="https://www.youtube.com/computerphile"><img class="youtube" src="/images/blog/youtube/computerphile.jpg" alt="computerphile"/></a>
+        <a href="https://www.youtube.com/user/AGADMATOR"><img class="youtube" src="/images/blog/youtube/agadmator.jpg" alt="agadmator"/></a>
+        <a href="https://www.youtube.com/user/RosenChess"><img class="youtube" src="/images/blog/youtube/ericrosen.jpg" alt="ericrosen"/></a>
+        <a href="https://www.youtube.com/user/awfguitar"><img class="youtube" src="/images/blog/youtube/andrewfoy.png" alt="andrewfoy"/></a>
+        <a href="https://www.youtube.com/watch?v=5qap5aO4i9A"><img class="youtube" src="/images/blog/youtube/lofi2.jpg" alt="lofi"/></a>
+        <a href="https://www.youtube.com/khanacademy"><img class="youtube" src="/images/blog/youtube/khan.png" alt="khan"/></a>
+        <a href="https://www.youtube.com/channel/UCoOae5nYA7VqaXzerajD0lg"><img class="youtube" src="/images/blog/youtube/ali.jpg" alt="ali"/></a>
+</section>
 
-More to come here..
+# Netflix
+
+Work in progress :)
