added education and updated gpa

--- a/_posts/2019-12-31-books.md
+++ b/_posts/2019-12-31-books.md
@@ -2,7 +2,7 @@
 layout:       post
 title:        Reading and Media
 date:         2020-11-26
-summary:      Books, Netflix, Youtube and more!
+summary:      Books, Youtube and more!
 categories:   
 ---
 
@@ -12,8 +12,7 @@ categories:
 
 I didn't like reading in high school. I thought it was a big waste of time. But as I began to read more, 
 I found myself learning a lot about things that really interested me. 
-Although I still have a hard time forcing myself to sit down and read a book 
-rather than watch some youtube, I definitely do have a newfound appreciation for reading. 
+Although I still have a hard time forcing myself to sit down and read a book, I definitely do have a newfound appreciation for reading. 
 Thus, I have started incorporating a little bit of reading into my daily life.
 
 Currently I am reading:
@@ -44,6 +43,4 @@ Here is a collection of my favourite Youtube channels. Check them out for yourse
         <a href="https://www.youtube.com/channel/UCoOae5nYA7VqaXzerajD0lg"><img class="youtube" src="/images/blog/youtube/ali.jpg" alt="ali"/></a>
 </section>
 
-# Netflix
 
-Work in progress :)
